--- a/src/app/cv-section/home/documents/certificate/styles/_responsive.sass
+++ b/src/app/cv-section/home/documents/certificate/styles/_responsive.sass
@@ -11,40 +11,6 @@
     span:last-child
       margin-left: 0
 
-@media (max-width: 720px)
-  .cv-section-document-header
-    padding: calc(24px + 72px + 1rem) 20px 24px
-
-  .cv-section-document-header-inner
-    align-items: flex-start
-
-  .cv-section-document-header-top
-    flex-direction: row
-    align-items: flex-start
-
-  .cv-section-document-actions
-    flex-wrap: wrap
-
-  .cv-section-document-main
-    padding: 24px 16px 40px
-    margin-top: 0
-
-  .cv-section-document-meta
-    flex-direction: column
-    align-items: flex-start
-
-    .cv-section-document-links
-      justify-content: flex-start
-
-  .cv-section-document-columns
-    grid-template-columns: 1fr
-
-  .cv-section-document-card
-    padding: 1rem 1.25rem
-
-  .cv-section-document-cert-intro-grid
-    grid-template-columns: 1fr
-
 @media print
   :host
     width: 100% !important
